[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdfm-artifact-gui"
version = "0.1.0"
description = "A graphical interface for creating and inspecting RDFM artifacts"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Aethero", email = "team@aethero.com"},
    {name = "Adam Schoenfeld", email = "adam@aethero.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
keywords = ["rdfm", "device-management", "gui", "fleet-management"]

# Pillow required for logo and icon display
dependencies = [
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Aethero-Company/Aethero-RDFM-Artifact-GUI/"
Documentation = "https://github.com/Aethero-Company/Aethero-RDFM-Artifact-GUI/"
Repository = "https://github.com/Aethero-Company/Aethero-RDFM-Artifact-GUI/"
Issues = "https://github.com/Aethero-Company/Aethero-RDFM-Artifact-GUI/issues"

[project.scripts]
rdfm-artifact-gui = "app.artifact_tool:main"

[tool.setuptools]
packages = ["app", "app.tabs"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
app = ["*.json", "assets/*.png", "assets/*.jpg", "assets/*.ico"]

[tool.ruff]
# Ruff configuration - using defaults with minimal overrides
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
