[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdfm-artifact-gui"
version = "0.1.0"
description = "A graphical interface for creating and inspecting RDFM artifacts"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Aethero", email = "team@aethero.com"},
    {name = "Adam Schoenfeld", email = "adam@aethero.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
keywords = ["rdfm", "device-management", "gui", "fleet-management"]

# Pillow required for logo and icon display
dependencies = [
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Aethero-Company/Aethero-RDFM-Artifact-GUI/"
Documentation = "https://github.com/Aethero-Company/Aethero-RDFM-Artifact-GUI/"
Repository = "https://github.com/Aethero-Company/Aethero-RDFM-Artifact-GUI/"
Issues = "https://github.com/Aethero-Company/Aethero-RDFM-Artifact-GUI/issues"

[project.scripts]
rdfm-artifact-gui = "app.artifact_tool:main"

[tool.setuptools]
packages = ["app", "app.tabs"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
app = ["*.json", "assets/*.png", "assets/*.jpg", "assets/*.ico"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "PL",    # Pylint
    "RUF",   # Ruff-specific rules
]
extend-select = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
